# k8s-object-syncer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  index.yaml  local-test.sh
.github/: install.sh
.github/workflows/: build.yaml  publish.yml
charts/k8s-object-syncer/: Chart.yaml  README.md  values.yaml
charts/k8s-object-syncer/crds/: crds.yaml
charts/k8s-object-syncer/templates/: _helpers.tpl  cluster-role.yaml  deployment.yaml  network-policy.yaml  pod-monitor.yaml  serviceaccount.yaml  source-roles.yaml  target-roles.yaml  watch-roles.yaml
rustrial-k8s-object-syncer/: Cargo.toml
rustrial-k8s-object-syncer-apis/: Cargo.toml
rustrial-k8s-object-syncer-apis/examples/: gen-crds.rs
rustrial-k8s-object-syncer-apis/src/: lib.rs
rustrial-k8s-object-syncer/src/: errors.rs  main.rs  object_sync_controller.rs  object_sync_modifications.rs  prometheus_exporter.rs  resource_controller.rs  utils.rs
