[workspace]
members = ["rustrial-k8s-object-syncer-apis", "rustrial-k8s-object-syncer"]
resolver = "2"

[workspace.dependencies]
kube = { version = "^2.0.1", default-features = false, features = ["derive"] }
k8s-openapi = { version = "0.26.0", default-features = false }
serde = { version = "^1.0.228", features = ["derive"] }
# serde_json version must match the one from kube
serde_json = "1.0.145"
