[package]
name = "rustrial-k8s-object-syncer-apis"
version = "0.2.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8.8"
serde_yaml = "0.9.21"

[dev-dependencies]
k8s-openapi = { workspace = true, default-features = false, features = [
    "v1_29",
    "schemars",
] }
