[package]
name = "rustrial-k8s-object-syncer"
version = "0.2.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
opentelemetry = "0.27.1"
opentelemetry_sdk = "0.27.1"
opentelemetry-prometheus = "0.27.0"
prometheus = "0.13.4"
anyhow = { version = "1.0.95", features = ["std"] }
thiserror = "2.0.9"
tokio = { version = "1.43.1", features = ["full"] }
futures = "0.3.31"
kube = { workspace = true, features = [
    "client",
    "rustls-tls",
    "derive",
    "jsonpatch",
] }
json-patch = "3.0.1"
kube-runtime = "0.98.0"
k8s-openapi = { workspace = true, default-features = false, features = [
    "v1_32",
    "schemars",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hyper = { version = "1.5.2", features = ["server", "http1"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["http1", "server"] }
rustrial-k8s-object-syncer-apis = { path = "../rustrial-k8s-object-syncer-apis" }
