[package]
name = "rustrial-k8s-object-syncer"
version = "0.2.0"
edition = "2021"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-prometheus = "0.29.1"
prometheus = "0.14.0"
anyhow = { version = "1.0.98", features = ["std"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
kube = { workspace = true, features = [
    "client",
    "rustls-tls",
    "derive",
    "jsonpatch",
] }
json-patch = "4.0.0"
kube-runtime = "^1.1.0"
k8s-openapi = { workspace = true, default-features = false, features = [
    "v1_33",
    "schemars",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hyper = { version = "1.6.0", features = ["server", "http1"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14", features = ["http1", "server"] }
rustrial-k8s-object-syncer-apis = { path = "../rustrial-k8s-object-syncer-apis" }
rustls = { version = "0.23.28", features = ["ring"] }
