[package]
name = "rustrial-k8s-object-syncer"
version = "0.2.0"
edition = "2024"
license = "Unlicense OR MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "^0.4.29"
env_logger = "0.11.10"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["metrics"] }
opentelemetry-prometheus = { version = "0.31.0" }
prometheus = "0.14.0"
anyhow = { version = "^1.0.0", features = ["std"] }
thiserror = "2.0.18"
tokio = { version = "^1.50.0", features = ["full"] }
futures = "^0.3.32"
kube = { workspace = true, features = [
    "client",
    "rustls-tls",
    "derive",
    "jsonpatch",
] }
json-patch = "4.1.0"
kube-runtime = "^3.1.0"
k8s-openapi = { workspace = true, default-features = false, features = [
    "v1_35",
    "schemars",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hyper = { version = "1.8.1", features = ["server", "http1"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["http1", "server"] }
rustrial-k8s-object-syncer-apis = { path = "../rustrial-k8s-object-syncer-apis" }
rustls = { version = "0.23.37", features = ["ring"] }
